--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "javascript-time-ago": "^2.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-time-ago": "^7.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
