Implement tab system

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "echarts": "^5.3.1",
     "echarts-for-react": "^3.0.2",
     "express": "^4.17.2",
-    "googleapis": "^94.0.0"
+    "googleapis": "^94.0.0",
+    "redux-persist": "^6.0.0",
+    "uuid": "^8.3.2"
   }
 }
