--- a/src/client/package.json
+++ b/src/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.52.0",
+    "@blueprintjs/popover2": "^0.14.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
