--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Google OAuth
-BASE_URL="https://www.example.com:3000"
+DRIVE_BASE_URL="https://www.example.com:3000"
 CLIENT_ID="xyz.apps.googleusercontent.com"
 CLIENT_SECRET="abc"
 OAUTH_REDIRECT="/authenticate/google"
@@ -7,5 +7,5 @@ OAUTH_REDIRECT="/authenticate/google"
 # Server
 PORT=3001	# 3001 is used for proxy in client [ src/client/package.json ]
 
-# NOTE: OAuth Redirect URI will become [BASE_URL + OAUTH_REDIRECT]
+# NOTE: OAuth Redirect URI will become [DRIVE_BASE_URL + OAUTH_REDIRECT]
 # NOTE2: During development, set your port in proxy of src/client/package.json
